@@ -3,12 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>us.freeandfair.production</groupId>
-	<artifactId>colorado_rla</artifactId>
-	<version>1.1.0</version>
+	<artifactId>corla-server</artifactId>
+	<version>2.0.3-SNAPSHOT</version>
 	<name>ColoradoRLA</name>
 	<description>A risk-limiting audit system for the State of Colorado</description>
 	<properties>
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	  <corla.test.excludedGroups>integration</corla.test.excludedGroups>
 	</properties>
 	<build>
 		<directory>target</directory>
@@ -36,7 +37,7 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-shade-plugin</artifactId>
-			  <version>3.0.0</version>
+			  <version>3.1.1</version>
 			  <executions>
 			    <execution>
 			      <goals>
@@ -52,6 +53,14 @@
 			      </configuration>
 			    </execution>
 			  </executions>
+			</plugin>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>2.22.0</version>
+			  <configuration>
+			    <excludedGroups>${corla.test.excludedGroups}</excludedGroups>
+			  </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -75,7 +84,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>checkstyle</id>
@@ -84,9 +93,8 @@
 							<configLocation>${project.basedir}/project_configuration/freeandfair_checkstyle.xml</configLocation>
 							<suppressionsLocation>${project.basedir}/project_configuration/checkstyle_suppression.xml</suppressionsLocation>
 							<consoleOutput>true</consoleOutput>
-							<failOnViolation>true</failOnViolation>
 							<failsOnError>true</failsOnError>
-							<violationSeverity>warning</violationSeverity>
+							<violationSeverity>error</violationSeverity>
 							<linkXRef>false</linkXRef>
 						</configuration>
 						<goals>
@@ -95,6 +103,27 @@
 					</execution>
 				</executions>
 			</plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>-Xms512m</argument>
+            <argument>-Xmx512m</argument>
+            <argument>-XX:NewRatio=3</argument>
+            <argument>-XX:+PrintGCTimeStamps</argument>
+            <argument>-XX:+PrintGCDetails</argument>
+            <argument>-Xloggc:gc.log</argument>
+            <argument>-classpath</argument>
+            <classpath/>
+            <argument>us.freeandfair.corla.Main</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
@@ -152,6 +181,11 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.4</version>
 		</dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+    </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -208,5 +242,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 		</dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
 	</dependencies>
 </project>
